[package]
name = "csp-hashes"
version = "0.0.3"
edition = "2021"
authors = ["Dominic <code@dominic.computer>"]
description = "CSP-hashes hashes inline script and style HTML elements for generating a Content Security Policy (CSP)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DominicBurkart/csp-hashes"

[dependencies]
base64 = "0.21.2"
scraper = "0.16.0"
sha2 = "0.10.6"
